--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ footer a:hover {
 
 <footer>
   DevOps Internship Program EBPL-2025 | 
-  <a href="https://github.com/arunadevi2705-max/NM-task" target="_blank">🌐 View on GitHub</a>
+  <a href="https://github.com/Kalaivani-1/NMtasks" target="_blank">🌐 View on GitHub</a>
 </footer>
 
 <script>
@@ -182,4 +182,5 @@ setInterval(updateTraffic, 1000);
 
 </body>
 </html>
+
 
